@@ -32,6 +32,7 @@
 * Dev - Add a GitHub Action workflow to run QIT E2E Integrations tests.
 * Fix - Check billing interval and period to set in mandate options.
 * Fix - Check order currency on pay for order page to display supported payment methods.
+* Update - Migrate payment request settings data to express checkout settings data.
 * Update - Make the new Stripe Express Checkout Element enabled by default in all accounts.
 
 = 9.0.0 - 2024-12-12 =
